wip(turma): Adiciona a funcionalidade de listagem e criação de turmas
