# src/main/java/br/com/barata/baragym/entity/TurmaEntity.java
@@ -1,13 +1,11 @@
 package br.com.barata.baragym.entity;
 
-import br.com.barata.baragym.security.enums.RoleEnum;
 import lombok.*;
 import org.hibernate.annotations.CreationTimestamp;
 import org.hibernate.annotations.UpdateTimestamp;
 
 import javax.persistence.*;
 import java.time.OffsetDateTime;
-import java.util.Random;
 
 @Getter
 @Setter
@@ -15,10 +13,10 @@ import java.util.Random;
 @ToString(onlyExplicitlyIncluded = true)
 @Entity
 @Builder
-@Table(name = "usuario")
+@Table(name = "turma")
 @NoArgsConstructor
 @AllArgsConstructor
-public class UsuarioEntity {
+public class TurmaEntity {
 
  @ToString.Include
  @EqualsAndHashCode.Include
@@ -27,27 +25,11 @@ public class UsuarioEntity {
  @Column(name = "id")
  private Long id;
 
- @Column(name = "matricula")
- private String matricula;
-
  @Column(name = "nome")
  private String nome;
-/*
 
- @ManyToOne(fetch = FetchType.LAZY)
- @JoinColumn(name = "customer_id")
- private CustomerEntity customer;
-*/
-
- @Column(name = "email")
- private String email;
-
- @Column(name = "senha")
- private String senha;
-
- @Column(name = "role")
- @Builder.Default
- private String role = RoleEnum.ROLE_USER.name();
+ @Column(name = "capacidade")
+ private Integer capacidade;
 
  @CreationTimestamp
  @Column(name = "created_at")
@@ -57,10 +39,4 @@ public class UsuarioEntity {
  @Column(name = "updated_at")
  private OffsetDateTime updatedAt;
 
- @PrePersist
- public void geraMatricula() {
-  Random rand = new Random();
-  // Generating random integers in range 0 to 99999
-  this.matricula = Integer.toString(rand.nextInt(100000));
- }
 }
