# src/main/java/br/com/barata/baragym/model/Turma.java
@@ -1,0 +1,14 @@
+package br.com.barata.baragym.model;
+
+import lombok.Builder;
+import lombok.Getter;
+
+@Getter
+@Builder
+public class Turma {
+
+ private Long id;
+ private String nome;
+ private Integer capacidade;
+
+}
